[package]
name = "rocev2-parser-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
pcap-parser = { version = "0.15.0", features = ["serialize", "data"] }
pnet = { version = "0.35.0", features = ["serde"] }
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
